@@ -24,5 +24,6 @@
 #define GCERR_SPACE_BEFORE_PUNCTUATION 3
 #define GCERR_EXTRA_COMMA 4
 #define GCERR_INVALID_SENTENCE_STARTER 5
+#define GCERR_WRITE_FIRST_LOWERCASE 6
 
 #endif
